##
## Cargo.toml - Numbrs package metadata
## Copyright (C) 2022  Kian Kasad
##
## This file is part of Numbrs.
##
## Numbrs is free software: you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation, version 3 of the License.
##
## Numbrs is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with Numbrs.  If not, see <https://www.gnu.org/licenses/>.
##

[package]
name = "numbrs"
authors = [
    "Kian Kasad <kian@kasad.com>",
]
version = "1.0.0"
edition = "2021"

build = "build.rs"

[package.metadata]
copyright-years = "2022"

[lib]
name = "numbrs"
path = "src/lib.rs"

[[bin]]
name = "numbrs"
path = "src/main.rs"

[dependencies]
num = "0.4.0"
rustyline = "10.0.0"
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.37"

[dev-dependencies]
pretty_assertions = "1.3.0"

[build-dependencies]
cargo_metadata = "0.15.0"
glob = "0.3.0"
